--- a/roles/bind/templates/db.slayble.ttu.j2
+++ b/roles/bind/templates/db.slayble.ttu.j2
@@ -6,6 +6,11 @@ $TTL	604800
 			2419200		; Expire
 			 604800 )	; Negative Cache TTL
 ;
-{{ startup_name }}.	IN	NS	manuniia-1
-manuniia-1	IN	A	{{ hostvars['manuniia-1']['ansible_default_ipv4']['address'] }}
-manuniia-2	IN	A	{{ hostvars['manuniia-2']['ansible_default_ipv4']['address'] }}
+
+{% for vm in groups['dns_servers'] %}
+{{ startup_name }}.	IN	NS	{{ vm }}
+{% endfor %}
+
+{% for vm in groups['all'] %}
+{{ vm }}	IN	A	{{ hostvars[vm]['ansible_default_ipv4']['address'] }}
+{% endfor %}
