--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -24,22 +24,17 @@ rule_files:
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
+
   - job_name: 'prometheus'
-
-    # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 5s
-    scrape_timeout: 5s
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: 
+{% for n in groups['prometheus'] %}
+        - {{ n }}:9090
+{% endfor %}
 
   - job_name: linux
     static_configs:
       - targets:
-{% for n in vms %}
+{% for n in groups['all'] %}
         - {{ n }}:9100
 {% endfor %}
