--- a/roles/nginx/templates/default.j2
+++ b/roles/nginx/templates/default.j2
@@ -12,4 +12,22 @@ server {
 		proxy_pass http://manuniia-2:9090/prometheus;
 	}
 {% endif %}
+
+{% if inventory_hostname in groups['grafana'] %}
+    location /grafana {
+        proxy_pass http://manuniia-2:{{ grafana_port }}/grafana;
+        proxy_set_header Host $http_host;
+    }
+{% endif %}
 }
+
+
+server {
+	listen 8080 default_server;
+
+	location = /stub_status {
+    	stub_status;
+	}
+
+}
+
