--- a/roles/bind/templates/bind.options.j2
+++ b/roles/bind/templates/bind.options.j2
@@ -21,3 +21,8 @@ options {
 statistics-channels {
   inet 127.0.0.1 port 8053 allow { 127.0.0.1; };
 };
+
+zone "{{ startup_name }}." {
+    type primary;
+    file "db.{{ startup_name }}";
+};
