--- a/roles/bind/templates/db.slayble.ttu.j2
+++ b/roles/bind/templates/db.slayble.ttu.j2
@@ -14,3 +14,7 @@ $TTL	604800
 {% for vm in groups['all'] %}
 {{ vm }}	IN	A	{{ hostvars[vm]['ansible_default_ipv4']['address'] }}
 {% endfor %}
+
+influxdb	IN	CNAME	{{ groups['influxdb'][0] }}
+prometheus	IN	CNAME	{{ groups['prometheus'][0] }}
+telegraf	IN	CNAME	{{ groups['influxdb'][0] }}
