lan 11 done, lab 12 start

--- a/roles/bind/templates/db.slayble.ttu.j2
+++ b/roles/bind/templates/db.slayble.ttu.j2
@@ -21,3 +21,4 @@ influxdb	IN	CNAME	{{ groups['influxdb'][0] }}
 prometheus	IN	CNAME	{{ groups['prometheus'][0] }}
 grafana		IN	CNAME	{{ groups['grafana'][0] }}
 telegraf	IN	CNAME	{{ groups['influxdb'][0] }}
+agama		IN	CNAME	{{ groups['web_servers'][0] }}
