--- a/roles/nginx/templates/default.j2
+++ b/roles/nginx/templates/default.j2
@@ -1,12 +1,15 @@
 server {
-	listen 80 default_server;
-	server_name _;
-
-	location / {
-		uwsgi_pass localhost:5000;
-		include uwsgi_params;
-	}
 	
+    listen 80 default_server;
+        server_name _;
+
+{% if inventory_hostname in groups['web_servers'] %}
+	location / {
+		proxy_pass http://agama:8001;
+		proxy_set_header Host $http_host;
+	}
+{% endif %}
+
 {% if inventory_hostname in groups['prometheus'] %}
 	location /prometheus {
 		proxy_pass http://prometheus:9090/prometheus;
