--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -29,44 +29,38 @@ scrape_configs:
     metrics_path: /prometheus/metrics
     static_configs:
       - targets: 
-{% for n in groups['prometheus'] %}
-        - {{ n }}:9090
-{% endfor %}
+        - prometheus:9090
+
 
   - job_name: linux
     static_configs:
       - targets:
-{% for n in groups['all'] %}
-        - {{ n }}:9100
-{% endfor %}
+        - ns-1:9100
+        - ns-2:9100
+
 
   - job_name: mysql
     static_configs:
       - targets: 
-{% for n in groups['db_servers'] %}
-        - {{ n }}:9104
-{% endfor %}
+        - db-1:9104
+        - db-2:9104
 
   - job_name: bind9
     static_configs:
       - targets: 
-{% for n in groups['dns_servers'] %}
-        - {{ n }}:9119
-{% endfor %}
+        - ns-1:9119
+        - ns-2:9119
 
   - job_name: nginx
     static_configs:
       - targets: 
-{% for n in groups['all'] %}
-        - {{ n }}:9113
-{% endfor %}
+        - www-1:9113
+        - www-2:9113
 
   - job_name: influxdb
     static_configs:
       - targets: 
-{% for n in groups['influxdb'] %}
-        - {{ n }}:9424
-{% endfor %}
+        - influxdb:9424
 
   - job_name: backup
     static_configs:
@@ -76,14 +70,12 @@ scrape_configs:
   - job_name: haproxy
     static_configs:
       - targets: 
-{% for n in groups['haproxy'] %}
-        - {{ n }}:9101
-{% endfor %}
+        - lb-1:9101
+        - lb-2:9101
 
   - job_name: keepalived
     static_configs:
       - targets: 
-{% for n in groups['keepalived'] %}
-        - {{ n }}:9165
-{% endfor %}
+        - lb-1:9165
+        - lb-2:9165
 
