--- a/roles/keepalived/templates/keepalived.conf.j2
+++ b/roles/keepalived/templates/keepalived.conf.j2
@@ -15,18 +15,19 @@ vrrp_instance XXX {
 {% endif %}
     advert_int 1                            
     virtual_ipaddress {                     
-        {{ virtual_ipaddress }}/24                   
+        {{ virtual_ipaddress }}                   
     }
     unicast_peer {                          
 {% if inventory_hostname == groups['web_servers'][0] %}
-       {{ hostvars[groups['web_servers'][1]].ansible_default_ipv4.address }}
+       lb-{{ groups['web_servers'][1].split('-')[1] }}
 {% endif %}
-
 {% if inventory_hostname == groups['web_servers'][1] %}
-        {{ hostvars[groups['web_servers'][0]].ansible_default_ipv4.address }}
+        lb-{{ groups['web_servers'][0].split('-')[1] }}
 {% endif %}
     }
     track_script {
         check_haproxy
     }
 }
+
+
