--- a/roles/nginx/templates/default.j2
+++ b/roles/nginx/templates/default.j2
@@ -5,7 +5,7 @@ server {
 
 {% if inventory_hostname in groups['web_servers'] %}
 	location / {
-		proxy_pass http://agama:8001;
+		proxy_pass http://www-{{ inventory_hostname.split('-')[1] }}:8001;
 		proxy_set_header Host $http_host;
 	}
 {% endif %}
