agama-client fix

--- a/roles/agama_client/templates/agama-client.service.j2
+++ b/roles/agama_client/templates/agama-client.service.j2
@@ -6,6 +6,8 @@ After=network-online.target
 [Service]
 User=agama-client
 ExecStart=/usr/local/bin/agama-client
+Restart=on-failure
+RestartSec=5s 
 
 [Install]
 WantedBy=multi-user.target
